13.0- 40mins->styling banner, need to fix responsiveness on mobile

--- a/src/CSS/Banner.css
+++ b/src/CSS/Banner.css
@@ -1,5 +1,25 @@
 .banner {
-  color: black;
+  color: white;
   object-fit: contain;
   height: 448px;
+}
+.banner_contents {
+  margin-left: 30px;
+  padding-top: 140px;
+  height: 190px;
+}
+.banner_header {
+  font-size: 3rem;
+  font-weight: 800;
+  padding-bottom: 0.3rem;
+  margin-right: 1000px;
+}
+.banner_rating {
+  width: 45rem;
+  line-height: 1.3;
+  padding-top: 1rem;
+  font-size: 1.5rem;
+  font-weight: 800px;
+  max-width: 360px;
+  height: 80px;
 }
